--- a/drupal8docker/sync/webform.webform.contact.yml
+++ b/drupal8docker/sync/webform.webform.contact.yml
@@ -18,7 +18,7 @@ title: Contact
 description: 'Basic email contact webform.'
 category: ''
 elements: "name:\n  '#title': 'Your Name'\n  '#type': textfield\n  '#required': true\n  '#default_value': '[current-user:display-name]'\nemail:\n  '#title': 'Your Email'\n  '#type': email\n  '#required': true\n  '#default_value': '[current-user:mail]'\nsubject:\n  '#title': Subject\n  '#type': textfield\n  '#required': true\n  '#test': 'Testing contact webform from [site:name]'\nmessage:\n  '#title': Message\n  '#type': textarea\n  '#required': true\n  '#test': 'Please ignore this email.'\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#submit__label': 'Send message'\n"
-css: ''
+css: ".form-required::after {\r\ncontent: '';\r\nvertical-align: super;\r\ndisplay: inline-block;\r\nbackground-image: url(/core/misc/icons/ee0000/required.svg);\r\nbackground-repeat: no-repeat;\r\nbackground-size: 6px 6px;\r\nwidth: 6px;\r\nheight: 6px;\r\nmargin: 0 0.3em;\r\n} "
 javascript: ''
 settings:
   ajax: false
